# app-hub

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-sources.json  com.francescogaglione.apphub.json  justfile  package.json  pnpm-lock.yaml  roadmap.md  svelte.config.js  tailwind.config.js
app_hub_backend/: Cargo.toml  Makefile.toml
app_hub_backend/src/: main.rs
app_hub_backend/src/managers/: app_image_installer.rs  app_image_uninstaller.rs  app_image_updater.rs  mod.rs
backend/: Cargo.toml
backend/src/: app_image_installer.rs  app_image_uninstaller.rs  lib.rs
common_utils/: Cargo.toml
common_utils/src/: app_images_helpers.rs  desktop_entry.rs  desktop_file_helpers.rs  file_system_helpers.rs  lib.rs
common_utils/src/models/: installed_app.rs  mod.rs
i18n/en/: app_hub.ftl  apphub.ftl
i18n/sv/: apphub.ftl
res/: app-hub.desktop  apphub.desktop  apphub.metainfo.xml  metainfo.xml
src/: app.html  app.rs  config.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/common_utils/: Cargo.toml
src-tauri/common_utils/src/: app_images_helpers.rs  desktop_file_builder.rs  desktop_file_helpers.rs  file_system_helpers.rs  icons_helpers.rs  lib.rs
src-tauri/src/: main.rs
src-tauri/src/commands/: app_image_commands.rs  app_settings_commands.rs  dialog_commands.rs  mod.rs  store_commands.rs
src-tauri/src/helpers/: app_images_helpers.rs  desktop_file_builder.rs  desktop_file_creator.rs  desktop_file_helpers.rs  file_conversion_helper.rs  file_system_helper.rs  mod.rs
src-tauri/src/models/: app_database.rs  app_list.rs  app_settings.rs  app_state.rs  desktop_entry.rs  mod.rs  request_installation.rs  response_app_hub_data.rs
src-tauri/src/services/: app_image_service.rs  app_store_service.rs  mod.rs  settings_service.rs  store_service.rs
src/core/: nav.rs
src/lib/components/: LoadingOverlay.svelte  Modal.svelte  Navbar.svelte
src/lib/helpers/: themeController.ts
src/lib/helpers/tauriCommands/: appDatabaseCommands.ts  appImageCommands.ts  appSettingsCommands.ts  dialogCommands.ts
src/lib/i18n/: i18n.ts  translations.ts
src/lib/icons/: AppStoreIcon.svelte  BoxIcon.svelte  InfoIcon.svelte  InstallIcon.svelte  SettingsIcon.svelte  TrashIcon.svelte
src/lib/models/: AppDatabase.ts  Applist.ts  Settings.ts
src/lib/themes/: index.ts
src/pages/: install_from_file.rs  installed_list.rs  mod.rs  settings.rs
src/routes/: +layout.svelte  +page.svelte  hooks.server.ts
src/routes/appInfo/: +page.svelte
src/routes/installedApps/: +page.svelte
src/routes/marketplace/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: settingsState.ts
