[package]
name = "app_hub_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
common_utils = { path = "../common_utils" }
backend = { path = "../backend" }
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.200", features = ["derive"] }
