[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.13", features = [] }
tauri-plugin-dialog = "2.0.0-beta.3"
tauri-plugin-store = "2.0.0-beta.4"
log = "0.4.21"
env_logger = "0.11.3"
dirs = "5.0.1"
regex = "1.10.4"
base64 = "0.21.7"
mime_guess = "2.0.4"
tauri-plugin-log = { version = "2.0.0-beta.3", features = ["colored"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

