workspace = { members = ["common_utils"] }

[package]
name = "app"
version = "0.1.0"
description = "AppHub"
authors = ["https://github.com/francesco-gaglione"]
license = "MIT"
repository = "https://github.com/francesco-gaglione/AppHub"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
common_utils = { path = "./common_utils" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.17", features = [] }
tauri-plugin-shell = "2.0.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-store = "2.0.0-beta.6"
log = "0.4.21"
env_logger = "0.11.3"
regex = "1.10.4"
tauri-plugin-log = { version = "2.0.0-beta.4", features = ["colored"] }
tauri-plugin-persisted-scope = "2.0.0-beta.7"
tauri-plugin-single-instance = "2.0.0-beta.7"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to swith between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

