[package]
name = "common_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
log = "0.4.21"
base64 = "0.21.7"
mime_guess = "2.0.4"
dirs = "5.0.1"
glob = "0.3.1"
fs_extra = "1.3.0"
